# new-mas

./: LICENSE  Output_report.md  README.md  food_safety_report.md  pyproject.toml  report.md
src/new_mas/: crew.py  main.py
src/new_mas/config/: agents.yaml  tasks.yaml
