[project]
name = "new_mas"
version = "0.1.0"
description = "new_mas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
new_mas = "new_mas.main:run"
run_crew = "new_mas.main:run"
train = "new_mas.main:train"
replay = "new_mas.main:replay"
test = "new_mas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
